# open-benchmarks

./: .gitignore  LICENSE  README.md  benchmark_summary.csv  pyproject.toml
biobench/: README.md
biobench/legacy_v2/: README.md  biobench_v2_ligand_modules.csv  biobench_v2_manifest_clean.csv  biobench_v2_manifest_unfiltered.csv  biobench_v2_summary.json
cohort-level-bench/: README.md  benchmark_summary.csv
cohort-level-bench/baseline/: README.md  atlas_orr_baseline.py  atlas_orr_ctgov_audit.py  atlas_orr_lodo_tuning.py  depmap_orr_baseline.py  reproduce_atlas_orr_results.py  reproduce_depmap_orr_results.py
cohort-level-bench/clinical_rows/: README.md  cohort_benchmark_strict44_clinical_rows.csv  cohort_benchmark_v2_clinical_rows.csv  cohort_benchmark_v2_eval_clinical_rows.csv  cohort_benchmark_v2_orr_labeled_clinical_rows.csv
docs/: alignment_report.md  atlas_orr_baseline.md  depmap_orr_baseline.md  methodology.md  row_artifacts_summary.json  source_artifacts.md  universal_softmin_crc_patient_probability.md  universal_softmin_crc_patient_rank_score.md
notebooks/: 01_cohort_benchmarks.ipynb  02_patient_benchmarks.ipynb  README.md
patient-level-bench/: README.md  benchmark_summary.csv
patient-level-bench/baseline/: README.md
scripts/: export_public_bundle.py  rebuild_benchmark_summary.py  reproduce_formula_controls.py  reproduce_release_scores.py
tests/: test_atlas_ctgov_audit.py  test_atlas_orr.py  test_biobench_v3.py  test_cohort_v2.py  test_depmap_orr.py  test_metrics.py  test_patient_crc.py  test_public_row_artifacts.py
(+132 files in other folders)
