[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-benchmarks"
version = "0.1.0"
description = "Reusable benchmark logic for BioBench, cohort, clinical-response, Atlas, and DepMap baselines."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Open Benchmarks contributors" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
open-benchmarks = "spatial_benchmarks.cli:main"
spatial-benchmarks = "spatial_benchmarks.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
